# fishlist

./: .gitignore  Makefile  pyproject.toml
docker/local_development/: database.env  docker-compose.yml
fishlist/: manage.py
fishlist/fishes/: apps.py  models.py
fishlist/fishes/migrations/: 0001_initial.py
fishlist/fishlist/: asgi.py  settings.py  urls.py  wsgi.py
